# clock_trae

./: .gitignore  index.html  main.js  package.json  readme.md  style.css  vite.config.js
scripts/: generate-icons.js  icon-generator.html  make-icons.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/animations/: fade.js  flip.js  rotate.js  slide.js  zoom.js
src/config/: themes.js
src/modules/: animation.js  renderer.js
